src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>ANC__c</fullName>
        <label>ANC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressID__c</fullName>
        <description>MAR Address_Id</description>
        <label>Address ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyCode__c</fullName>
        <description>Agency value is stored in this field</description>
        <label>Agency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AliasName__c</fullName>
        <label>AliasName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BlockName__c</fullName>
        <label>BlockName</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CaseOwner__c</fullName>
        <formula>Owner:User.FirstName &amp;&apos; &apos;&amp;Owner:User.LastName &amp;&apos;&apos;&amp; 
IF(ISBLANK(Owner:Queue.QueueName ), &apos;&apos;, &quot;,&quot;&amp;Owner:Queue.QueueName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseOwner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Closure_Comment_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Closure Comment Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Closure_Comment__c</fullName>
        <label>Case Closure Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Source__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Case Source</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Neighborhood Cluster</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <formula>Contact.Email</formula>
        <label>ContactEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Address__c</fullName>
        <formula>Contact.MailingStreet + &apos;, &apos; + Contact.MailingCity + &apos;, &apos; + Contact.MailingState + &apos;, &apos; + Contact.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <formula>CreatedBy.FirstName &amp;&apos; &apos;&amp;CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpectedBusinessResolutionDate__c</fullName>
        <description>Test purpose ignore this for now</description>
        <label>ExpectedBusinessResolutionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expected_Resolution_Date__c</fullName>
        <formula>/*IF( 
   ISPICKVAL(SRType__r.SLAType__c, &apos;Calendar days&apos;) ,
   CreatedDate+VALUE(BLANKVALUE(SRType__r.SLA__c,SRType_Jurisdiction__r.SLA__c)),  
   IF(ISPICKVAL(SRType__r.SLAType__c, &apos;Business days&apos;),          CreatedDate+VALUE(BLANKVALUE(SRType__r.SLA__c,SRType_Jurisdiction__r.SLA__c))+
		( VALUE(BLANKVALUE(SRType__r.SLA__c,SRType_Jurisdiction__r.SLA__c)) - Business_Days_Count__c)
		, null
	) 
)

*/

IF(
ISPICKVAL(SRType__r.SLAType__c, &apos;Calendar days&apos;) ,
CreatedDate+VALUE(BLANKVALUE(SLA__c,SRType__r.SLA__c)),
IF(ISPICKVAL(SRType__r.SLAType__c, &apos;Business days&apos;), ExpectedBusinessResolutionDate__c
, null
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_System_Name__c</fullName>
        <label>External System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlexNotes__c</fullName>
        <label>FlexNotes (not used)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FullBlock__c</fullName>
        <label>FullBlock</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__ADDRESS_ID__c</fullName>
        <label>Address ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__ADDRNUMSUFFIX__c</fullName>
        <label>Address Number Suffix</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__ADDRNUM__c</fullName>
        <label>Address Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__ALIASNAME__c</fullName>
        <label>Alias Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__ANC__c</fullName>
        <label>ANC</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__CITY__c</fullName>
        <label>City</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__Cluster__c</fullName>
        <label>Cluster</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__FULLADDRESS__c</fullName>
        <label>Full Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__FULLINTERSECTION__c</fullName>
        <label>Full Intersection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__INTERSECTIONID__c</fullName>
        <label>Intersection ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__LATITUDE__c</fullName>
        <label>Latitude</label>
        <precision>10</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__LONGITUDE__c</fullName>
        <label>Longitude</label>
        <precision>10</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__MARID__c</fullName>
        <label>MAR ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__NATIONALGRID__c</fullName>
        <label>National Grid</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__POLDIST__c</fullName>
        <label>Police District</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__QUADRANT__c</fullName>
        <label>Quadrant</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__REFX__c</fullName>
        <label>Reference X</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__REFY__c</fullName>
        <label>Reference Y</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__ROADWAYSEGID__c</fullName>
        <label>Road Way Seg ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__STATE__c</fullName>
        <label>State</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__STNAME__c</fullName>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__STREET_TYPE__c</fullName>
        <label>Street Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__WARD__c</fullName>
        <label>Ward</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__XCOORD__c</fullName>
        <label>X Coordinate</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__YCOORD__c</fullName>
        <label>Y Coordinate</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__ZIPCODE__c</fullName>
        <label>Zipcode</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntersectionId__c</fullName>
        <label>Intersection Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JurisdictionDepartment__c</fullName>
        <formula>/*SRType__r.Jurisdiction__r.Name */ 
SRType__r.Jurisdiction__r.Department__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jurisdiction Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JurisdictionId__c</fullName>
        <description>DONT USE THIS FIELD ITS FOR TESTING PURPOSE</description>
        <label>JurisdictionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <formula>SRType__r.Jurisdiction__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Dept Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>Amharic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnamese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <formula>LastModifiedBy.FirstName &amp;&quot; &quot;&amp; LastModifiedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Case_Comment_Added__c</fullName>
        <description>This field will be updated by a workflow. It is meant to inform the case that it has a new comment added within a timeframe. If the comment is completely new then it will send an email for it.</description>
        <label>Last Case Comment Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Update_Date__c</fullName>
        <label>Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LatestCaseComments__c</fullName>
        <description>Field is updated with the latest case comments</description>
        <label>LatestCaseComments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Media_URL__c</fullName>
        <label>Media URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OldCaseNumber__c</fullName>
        <label>OldCaseNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POlDistrict__c</fullName>
        <label>Police District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA__c</fullName>
        <label>PSA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Status__c</fullName>
        <description>The previous status of this case.</description>
        <label>Previous Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quadrant__c</fullName>
        <label>Quadrant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoadwaySegId__c</fullName>
        <label>RoadwaySegId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Status__c</fullName>
        <formula>if( IsClosed,
    if ( ClosedDate &lt;= Expected_Resolution_Date__c , &apos;Met&apos;, &apos;Missed&apos; ),
    if ( Now() &lt;= Expected_Resolution_Date__c , &apos;Open&apos;, &apos;Overdue&apos; )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_and_Type__c</fullName>
        <formula>SLA__c + &apos; &apos; + TEXT(SRType__r.SLAType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMD__c</fullName>
        <label>SMD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRType_Jurisdiction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SR Type Jurisdiction</label>
        <referenceTo>ServiceRequestType_Jurisdiction__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SRType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request Type</label>
        <referenceTo>ServiceRequestType__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SR_Status__c</fullName>
        <formula>Text(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email_On_SR_Closed__c</fullName>
        <formula>SRType__r.SendEmailOnSRClosed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Email On SR Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Email_On_SR_Creation__c</fullName>
        <formula>SRType__r.SendEmailOnSRCreation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Email On SR Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Update_Email_Flag__c</fullName>
        <description>Used when the SR Activity Completed needs to trigger an Update Email sent to the Citizen (Case.Contact.Email).  Standard Workflow Email events on SR Activity event cannot email that Contact</description>
        <label>Send Update Email Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_Name__c</fullName>
        <formula>SRType__r.Service_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Request Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_Number__c</fullName>
        <description>Displays the correct logical Service Request Id whether the request originated in 311Force or the legacy Motorola CSR.</description>
        <formula>if(LEFT(LegacyID__c,4)=&quot;CSR-&quot;,OldCaseNumber__c,CaseNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Request Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicing_Agency_Expanded__c</fullName>
        <formula>SRType__r.Servicing_Agency_Expanded__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Servicing Agency Expanded</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicing_Agency__c</fullName>
        <formula>SRType__r.Agency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Servicing Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SnowRoute__c</fullName>
        <label>Snow Route</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SnowZone__c</fullName>
        <label>Snow Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IMAGE( 
CASE( Status, 
&quot;Closed&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Closed - Incomplete Information&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Duplicate (Closed)&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Duplicate (Opened)&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;In Progress&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Voided&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Dispute&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;Open&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Status Flag&quot;)

&amp; &apos; &apos; &amp; TEXT(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TestField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ward__c</fullName>
        <label>Ward</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ward_picklist__c</fullName>
        <label>Ward</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>XCOORD__c</fullName>
        <label>XCOORD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YCOORD__c</fullName>
        <label>YCOORD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <formula>if(isnumber(RIGHT(Address__c, 5)),right(Address__c,5),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zipcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Author_External_Id__c</fullName>
        <label>Author External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Username__c</fullName>
        <label>Author Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__twitterId__c</fullName>
        <externalId>true</externalId>
        <label>Conversation External Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllCases</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Service_Request_Number__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Service_Request_Name__c</columns>
        <columns>Servicing_Agency__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>Case_Source__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Address__c</columns>
        <columns>Ward__c</columns>
        <columns>SLA_and_Type__c</columns>
        <columns>Expected_Resolution_Date__c</columns>
        <columns>Last_Update_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Source__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases_Open_Only</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Service_Request_Number__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>Service_Request_Name__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Case_Source__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Address__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Incomplete Information</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Duplicate (Closed)</value>
        </filters>
        <label>All Cases - Open Only</label>
    </listViews>
    <listViews>
        <fullName>CFSA_Queue_Case</fullName>
        <columns>Service_Request_Number__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Servicing_Agency__c</field>
            <operation>equals</operation>
            <value>CFSA</value>
        </filters>
        <label>CFSA Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DCRA_Queue_Case</fullName>
        <columns>Service_Request_Number__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Expected_Resolution_Date__c</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Servicing_Agency__c</field>
            <operation>equals</operation>
            <value>DCRA</value>
        </filters>
        <label>DCRA Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DDS_Queue_Case</fullName>
        <columns>Service_Request_Number__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Expected_Resolution_Date__c</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Servicing_Agency__c</field>
            <operation>equals</operation>
            <value>DDS</value>
        </filters>
        <label>DDS Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DDoT_Cityworks_Queue</fullName>
        <columns>Service_Request_Number__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Expected_Resolution_Date__c</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>Address__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Case_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Servicing_Agency__c</field>
            <operation>equals</operation>
            <value>DDOT</value>
        </filters>
        <label>DDoT Cityworks Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DGS_queue_test</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Servicing_Agency__c</field>
            <operation>equals</operation>
            <value>DGS</value>
        </filters>
        <label>DGS queue test</label>
    </listViews>
    <listViews>
        <fullName>DMV_Adjudication_Services_Open</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>SRType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Jurisdiction__c</field>
            <operation>equals</operation>
            <value>ADJUSERV</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Duplicate (Opened),In Progress,Dispute,Open</value>
        </filters>
        <label>DMV - Adjudication Services (Open)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DMV_Driver_Vehicles_Services_Open</fullName>
        <columns>Service_Request_Number__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Expected_Resolution_Date__c</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Jurisdiction__c</field>
            <operation>equals</operation>
            <value>DRIVEHSE</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Duplicate (Opened),In Progress,Dispute,Open</value>
        </filters>
        <label>DMV - Driver/Vehicles Services (Open)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DMV_Requests_Queue</fullName>
        <columns>Service_Request_Number__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Expected_Resolution_Date__c</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Duplicate (Opened),In Progress,Open</value>
        </filters>
        <filters>
            <field>Servicing_Agency__c</field>
            <operation>equals</operation>
            <value>DMV</value>
        </filters>
        <label>DMV Requests Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DOEE_Queue_Case</fullName>
        <columns>Service_Request_Number__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Expected_Resolution_Date__c</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Servicing_Agency__c</field>
            <operation>equals</operation>
            <value>DOEE</value>
        </filters>
        <label>DOEE Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DOH_Queue_Case</fullName>
        <columns>Service_Request_Number__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Expected_Resolution_Date__c</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Servicing_Agency__c</field>
            <operation>equals</operation>
            <value>DOH</value>
        </filters>
        <label>DOH Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DPR_Queue_Case</fullName>
        <columns>Service_Request_Number__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Expected_Resolution_Date__c</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Servicing_Agency__c</field>
            <operation>equals</operation>
            <value>DPR</value>
        </filters>
        <label>DPR Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DPW_Queue_Case</fullName>
        <columns>CASES.STATUS</columns>
        <columns>Service_Request_Number__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Service_Request_Name__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Case_Source__c</columns>
        <columns>Ward__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Address__c</columns>
        <columns>Expected_Resolution_Date__c</columns>
        <columns>CreatedBy__c</columns>
        <columns>SnowRoute__c</columns>
        <columns>SnowZone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Servicing_Agency__c</field>
            <operation>equals</operation>
            <value>DPW</value>
        </filters>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>DPW Queue All Cases</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>